WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78261
[Gtk] security/set-form-autocomplete-attribute.html fails
https://bugs.webkit.org/show_bug.cgi?id=78261
Summary
[Gtk] security/set-form-autocomplete-attribute.html fails
Zan Dobersek
Reported
2012-02-09 11:37:35 PST
[Gtk] security/set-form-autocomplete-attribute.html fails
Attachments
Patch
(5.80 KB, patch)
2012-02-09 11:50 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2012-02-09 11:50:41 PST
Created
attachment 126341
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-09 20:31:07 PST
Comment on
attachment 126341
[details]
Patch Clearing flags on attachment: 126341 Committed
r107350
: <
http://trac.webkit.org/changeset/107350
>
WebKit Review Bot
Comment 3
2012-02-09 20:31:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug