[Gtk] security/set-form-autocomplete-attribute.html fails https://bugs.webkit.org/show_bug.cgi?id=78261

Patch by Zan Dobersek <zandobersek@gmail.com> on 2012-02-09
Reviewed by Martin Robinson.

Source/WebKit/gtk:

Add a helper function to DumpRenderTreeSupportGtk, returning
whether or not an element does perform autocompletion.

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::elementDoesAutoCompleteForElementWithId):
* WebCoreSupport/DumpRenderTreeSupportGtk.h:
(DumpRenderTreeSupportGtk):

Tools:

Use the new helper in DumpRenderTreeSupportGtk to properly
test whether an element performs autocompletion.

* DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
(LayoutTestController::elementDoesAutoCompleteForElementWithId):

LayoutTests:

Unskip the newly-passing test

* platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/95222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107350 268f45cc-cd09-0410-ab3c-d52691b4dbfc